# CICD

./: Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml
Documents/: README.md
app/: main.py
tests/: test_server.py
