[tool.poetry]
name = "cicd"
version = "0.1.0"
description = "poetry for project"
authors = ["ErikHorus1249 <tuananh1421999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
pytest = "^7.1.1"
fastapi = "^0.75.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
